--- a/themes/package.json
+++ b/themes/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "lint": "stylelint \"**/*.scss\"",
-    "style": "sass minecraft/scss/style.scss minecraft/css/style.css --no-source-map",
-    "style-min": "sass minecraft/scss/style.scss minecraft/css/style.min.css --no-source-map --style compressed"
+    "style": "sass kmom03/scss/style.scss kmom03/css/style.css --no-source-map",
+    "style-min": "sass kmom03/scss/style.scss kmom03/css/style.min.css --no-source-map --style compressed"
   },
   "keywords": [],
   "author": "",
